<!--
  Copyright (c) 2019 Bevilacqua Joey

  Licensed under the GNU GPLv3 license

  The text of the license can be found in the LICENSE file
  or at https://www.gnu.org/licenses/gpl.txt
  -->
<resources>

    <!-- Insulin -->
    <string name="insulin_list_title">Insulins</string>

    <!-- Insulin Editor -->
    <string name="insulin_editor_add">Add insulin</string>
    <string name="insulin_editor_edit">Edit insulin</string>
    <string name="insulin_editor_name">Name</string>
    <string name="insulin_editor_basal">Basal</string>
    <string name="insulin_editor_half_units">Half units</string>
    <string name="insulin_editor_save">Save</string>

    <string name="insulin_delete_title">Delete insulin</string>
    <string name="insulin_delete_msg">Are you sure you want to delete insulin \"%1$s\"? This action cannot be undone</string>
    <string name="insulin_delete_values">Also remove all its values from glucose readings</string>
    <string name="insulin_delete_positive">Delete</string>
</resources>
