<!--
  Copyright (c) 2018 Bevilacqua Joey

  Licensed under the GNU GPLv3 license

  The text of the license can be found in the LICENSE file
  or at https://www.gnu.org/licenses/gpl.txt
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/insulin_edit_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/insulin_editor_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/insulin_edit_icon_name"
        android:layout_width="24dp"
        android:layout_height="48dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insulin_edit_dialog_title"
        app:srcCompat="@drawable/ic_editor_insulin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/insulin_edit_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:hint="@string/insulin_editor_name"
        android:importantForAutofill="no"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/insulin_edit_icon_name"
        app:layout_constraintTop_toTopOf="@id/insulin_edit_icon_name"
        tools:targetApi="26" />

    <ImageView
        android:id="@+id/insulin_edit_icon_time"
        android:layout_width="24dp"
        android:layout_height="48dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insulin_edit_icon_name"
        app:srcCompat="@drawable/ic_editor_time" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/insulin_edit_time"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/insulin_edit_icon_time"
        app:layout_constraintTop_toTopOf="@id/insulin_edit_icon_time" />

    <ImageView
        android:id="@+id/insulin_edit_icon_basal"
        android:layout_width="24dp"
        android:layout_height="48dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insulin_edit_icon_time"
        app:srcCompat="@drawable/ic_basal" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/insulin_edit_basal"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/insulin_editor_basal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/insulin_edit_icon_basal"
        app:layout_constraintTop_toTopOf="@id/insulin_edit_icon_basal" />

    <ImageView
        android:id="@+id/insulin_edit_icon_half_units"
        android:layout_width="24dp"
        android:layout_height="48dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insulin_edit_icon_basal"
        app:srcCompat="@drawable/ic_half_units" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/insulin_edit_half_units"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/insulin_editor_half_units"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/insulin_edit_icon_half_units"
        app:layout_constraintTop_toTopOf="@id/insulin_edit_icon_half_units" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/insulin_edit_save"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/insulin_editor_save"
        android:textColor="?colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insulin_edit_icon_half_units"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/insulin_edit_delete"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:textColor="?colorAccent"
        app:layout_constraintEnd_toStartOf="@id/insulin_edit_save"
        app:layout_constraintTop_toTopOf="@id/insulin_edit_save"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
